--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -19,10 +19,11 @@
     <span class="input-group-text" (click)="addTodo(todo.value)">
     <i class="material-icons">add</i></span>
    </div>
+   <input type="submit" style="visibility: hidden;" />
   </div>
   <div class="data">
   <ul class="list-unstyled">
-   <li [@moveInLeft]  *ngFor="let todo of todoArray">{{todo}} <i (click)="deleteItem(todo)" class="material-icons">delete</i></li>
+   		<li [@moveInLeft]  *ngFor="let todo of todoArray">{{todo.description}} <i (click)="deleteItem(todo)" class="material-icons">delete</i></li>
   </ul>
  </div>
  </form>
